// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusCircle /> Status - Cancelled 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 status-circle-canceled"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<StatusCircle /> Status - Error 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-times-circle fa-w-16 status-circle-danger"
  data-icon="times-circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<StatusCircle /> Status - Success 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-check-circle fa-w-16 status-circle-success"
  data-icon="check-circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<StatusCircle /> Status - Terminated 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 status-circle-canceled"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<StatusCircle /> Status - Warning 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 status-circle-warning"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<StatusCircle /> Status - not provided 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 status-circle-default"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;

exports[`<StatusCircle /> Status - random status 1`] = `
<svg
  aria-hidden="true"
  className="svg-inline--fa fa-circle fa-w-16 status-circle-default"
  data-icon="circle"
  data-prefix="fas"
  focusable="false"
  role="img"
  style={Object {}}
  viewBox="0 0 512 512"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;
